force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/BrillioFC__Apex_Class_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Apex Class Detail</label>
    <nameField>
        <label>Apex Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Apex Class Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>