force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__Apex_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Apex_Class_Type__c</fullName>
    <label>Apex Class Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>