force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Code_Coverage__c</fullName>
    <formula>IF( BrillioFC__NumLinesCovered__c+BrillioFC__NumLinesUncovered__c == 0 , 0, BrillioFC__NumLinesCovered__c / (BrillioFC__NumLinesCovered__c+BrillioFC__NumLinesUncovered__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>