force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__External_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>