force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>