force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__isTestClass__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isTestClass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTestClass</label>
    <type>Checkbox</type>
</CustomField>