force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__Length_Without_Comments__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Length_Without_Comments__c</fullName>
    <inlineHelpText>Class which is part of Managed package shows negative value.</inlineHelpText>
    <label>Size Without Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>