force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__Modifiers__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Modifiers__c</fullName>
    <label>Modifiers</label>
    <type>TextArea</type>
</CustomField>