force-app/main/default/objects/BrillioFC__Apex_Class_Detail__c/fields/BrillioFC__NumLinesUncovered__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NumLinesUncovered__c</fullName>
    <label>Number Lines Uncovered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>